--- a/panoptes/templates/base.jinja2
+++ b/panoptes/templates/base.jinja2
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang='en' class=''>
 <head>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.0/css/bu
-lma.css'>
+    <link rel='stylesheet' href='/static/bulma.css'>
     <style class="cp-pen-styles"></style>
 </head>
 
