--- a/panoptes/templates/base.jinja2
+++ b/panoptes/templates/base.jinja2
@@ -28,8 +28,8 @@
 
     <div class="section">{% block content %}{% endblock %}</div>
 
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/static/plotly-latest.min.js"></script>
+    <script src="/static/jquery.min.js"></script>
     <script src="/static/panoptes.js"></script>
     {% block script %}{% endblock %}
 
