added about:support dump button

--- a/panoptes/templates/tools.jinja2
+++ b/panoptes/templates/tools.jinja2
@@ -22,7 +22,7 @@
     <div class="column auto">
         <div class="panel">
             <p class="panel-heading">
-                Visit URL
+                Actions
             </p>
             <div class="panel-block">
                 <form action="/visit_url" method="post" enctype="multipart/form-data">
@@ -31,10 +31,14 @@
 </div>
                 <div class="field is-grouped">
                 <div class="control">
-                  <button class="button is-link">Visit</button>
+                  <button class="button is-link">Visit URL</button>
                 </div>
-               </div>
+                </div>
                 </form>
+             </div>
+             <div class="panel-block">
+                  <a class="button is-link" target="_blank" href="/about_support">Dump about:support</a>
+               </div>
             </div>
         </div>
     </div>
