--- a/panoptes/templates/dashboard.jinja2
+++ b/panoptes/templates/dashboard.jinja2
@@ -23,6 +23,8 @@
                 <div id="perf-container">
                 </div>
             </div>
+        </div>
+        <div class="columns is-multiline">
             <div class="column auto">
                 <div id="io-container">
                 </div>
