display the actual firefox version

--- a/panoptes/templates/dashboard.jinja2
+++ b/panoptes/templates/dashboard.jinja2
@@ -6,7 +6,7 @@
         <div class="level">
             <div class="level-left">
                 <div class="level-item">
-                    <div class="title">Nightly Debug 65.0a1</div>
+                    <div class="title" id="version"></div>
                 </div>
             </div>
             <div class="level-right">
